--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -197,7 +197,25 @@ strong{
     line-height: 1.5;
 }
 .homepage .container{
-    padding: unset;
+    padding-right: 20px;
+    padding-left: 20px;
+
+    @media (min-width: 576px){
+        max-width: 640px;        
+    }
+    @media screen and (min-width: 750px){
+        max-width: 720px;
+    }
+    @media screen and (min-width: 992px){
+        max-width: 960px;
+    }
+    @media screen and (min-width: 1200px){
+        max-width: 1140px;
+    }
+
+    @media screen and (min-width: 650px){
+        padding: unset;        
+    }
 }
 //  
 // .section-padding:first-of-type{
